# wines

./: .env.example  .gitignore  Cargo.toml  diesel.toml  queries.sql
migrations/2018-10-01-223316_create_saq_wine/: down.sql  up.sql
migrations/2018-10-25-050433_create_wine_recommendations/: down.sql  up.sql
migrations/2018-11-05-011637_add_available_online/: down.sql  up.sql
migrations/2018-11-05-220356_create_users/: down.sql  up.sql
migrations/2018-11-09-191915_wine_reco_user/: down.sql  up.sql
migrations/2019-04-26-200447_create_wine_reco_name/: down.sql  up.sql
migrations/2019-04-26-201143_remake_indexes/: down.sql  up.sql
src/: controllers.rs  crawler.rs  errors.rs  main.rs  models.rs  schema.rs  types.rs  utils.rs
static/: package-lock.json  package.json  tsconfig.json  webpack.config.js  webpack.prod.js
static/css/: index.css
static/html/: index.html
static/js/: App.vue  Wines.vue  WinesTable.vue  index.js
