[package]
name = "wines"
version = "0.1.0"
authors = ["jp <fiorini751@gmail.com>"]

[dependencies]
futures = "0.1"
csv = "1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
actix-web = { version = "0.7", features = ["alpn"] }
openssl = { version = "0.10", features = ["v110"] }
diesel = { version = "1.3.3", features = ["postgres", "numeric"] }
select = "0.4.2"
reqwest = "0.9.2"
bigdecimal = "0.0.11"
argon2rs = "0.2.5"
failure = "0.1.3"
pkg-config = "0.3.14"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
diesel_codegen = {version = "0.16.0", features = ["postgres"]}