[package]
edition = "2018"
name = "wines"
version = "0.1.2"
authors = ["jp <fiorini751@gmail.com>"]

[dependencies]
futures = "0.3.5"
rand = "0.7.3"
csv = "1.1.2"
serde = "1.0.114"
serde_derive = "1.0.114"
serde_json = "1.0.56"
openssl = { version = "0.10.30", features = ["v110"] }
actix-rt = "1.1.1"
actix-files = "0.2.2"
actix-identity = "0.2.1"
actix-web = { version = "2", features = ["openssl"] }
diesel = { version = "1.4.5", features = ["postgres", "numeric"] }
select = "0.5.0"
reqwest = "0.10.7"
regex = "1.3.9"
argon2rs = "0.2.5"
failure = "0.1.8"
pkg-config = "0.3.18"
bigdecimal = "0.1.2"
chrono = { version = "0.4.13", features = ["serde"] }
dotenv = "0.15.0"
tokio =  { version = "0.2.22", features = ["rt-core"] }

[dev-dependencies]
diesel_codegen = {version = "0.16.1", features = ["postgres"]}